# haskell-work

./: CHANGELOG.md  Component.hs  Component2.hs  Component3.hs  Component5.hs  Component6.hs  EqualityProofs.hs  Flags.hs  Haskell.cabal  IncrementalLambdaCalculusForMap.hs  IncrementalLambdaCalculusForMapTake2.hs  LazyEncoding.hs  Literal.hs  Main.hs  MemoBytes.hs  MultiAsset.hs  README.md  Reflect.hs  Script.hs  SumProd.hs  Univ.hs  stack.yaml
MapRecord/: MapRecord.hs  RecordAsMap.hs
