name:                Haskell
version:             0.1.0.0
description:         A place to experiment
author:              Tim Sheard
maintainer:          sheard@pdx.edu
build-type:          Simple
cabal-version:       >=1.10
category:            WorkInProgress
synopsis:            HaskellIdeasToShare
license:             PublicDomain

license-file:        LICENSE
extra-source-files:  CHANGELOG.md


executable Haskell
  main-is:
    Main.hs
  other-modules:
    Component2
    Component3
    Script
    MultiAsset
    Univ
    Literal
    Reflect
    EqualityProofs
    Classes
    LazyEncoding

  -- other-extensions:

  build-depends:       base,
    array,
    constraints,
    containers,
    mtl,
    registry,
    reflection,
    base,
    cborg,
    cardano-binary,
    bytestring,
    text

  default-language:    Haskell2010
